kube-manifest/redis.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: redis
  namespace: staging
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:  
    metadata:
      labels: 
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.0.10
          ports:
          - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: staging
  labels:
    app: redis
  # annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer  
    # alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
